Adjust content width for mobile screens
#16

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -90,8 +90,15 @@ header h2 {
 }
 
 .inner {
-  width: 620px;
+  width: 85%;
   margin: 0 auto;
+}
+
+@media (min-width: 992px) {
+  .inner {
+    width: 720px;
+    margin: 0 auto;
+  }	
 }
 
 #container .inner img {
